# e-YSIP_2024_ROS-BASED-SIHO

./: README.md
diff_drive_bot/: CMakeLists.txt  package.xml
diff_drive_bot/launch/: gazebo_model.launch.py
diff_drive_bot/model/: bot_description.xacro  robot.gazebo
diff_drive_bot/scripts/: README.md  encoder_emulator_vel.py  odom_gaussian.py  quad_odom.py
diff_drive_bot/skid_steer_ekf/: README.md
e-YSIP_2024_ROS-BASED-SIHO_DEV-HARDWARE/: README.md
e-YSIP_2024_ROS-BASED-SIHO_DEV-HARDWARE/LIDAR/: README.md
e-YSIP_2024_ROS-BASED-SIHO_DEV-HARDWARE/LIDAR_Odometry/: README.md
e-YSIP_2024_ROS-BASED-SIHO_DEV-HARDWARE/RTOS and uROS/: FreeRTOS_notes.txt  README.md
e-YSIP_2024_ROS-BASED-SIHO_DEV-HARDWARE/Socket_communication/: README.md
e-YSIP_2024_ROS-BASED-SIHO_DEV-HARDWARE/imu_codes/: README.md
esp32_holo_web/: platformio.ini
esp32_holo_web/data/: joy.html  joy.js
esp32_holo_web/src/: main.cpp
mini_bot_description/: README.md  package.xml  setup.cfg  setup.py
mini_bot_description/config/: display.rviz  ekf.yaml  mini_bot_navigation2.rviz  nav2_params.yaml
mini_bot_description/launch/: display.launch.py  gazebo.launch.py  mini_bot_house.launch.py  mini_bot_office.launch.py  navigation.launch.py
mini_bot_description/maps/: map.pgm  map.yaml  map_new.pgm  map_new.yaml  map_presentation.pgm  map_presentation.yaml  mini_bot_house.pgm  mini_bot_house.yaml  mini_bot_office.pgm  mini_bot_office.yaml
mini_bot_description/meshes/: bl_wheel_1.stl  br_wheel_1.stl  fl_wheel_1.stl  (+3 more)
mini_test_bot_description/: README.md  package.xml  setup.cfg  setup.py
(+58 files in other folders)
